<resources>
    <string name="app_name">ExampleAplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No hay Datos</string>
    <string name="no_data_movie">No hay datos de la película</string>
    <string name="title_toolbar_detail">Detalle</string>
    <string name="lbl_director">Director:</string>
    <string name="lbl_releaseYear">Release Year:</string>
    <string name="lbl_description">Description:</string>
    <string name="lbl_duration">Duration:</string>
    <string name="lbl_score">Score:</string>
    <string name="lbl_title">Title:</string>
    <string name="hint_edittext_title">Introduzca un título</string>
    <string name="waiting_response">Esperando Respuesta</string>
    <string name="title_mandatory">El título es obligatorio</string>
    <string name="btn_search_caption">Buscar</string>
    <string name="error_on_request">"Se produjo un error en la petición. Inténtelo de nuevo"</string>
</resources>